Small books visibility bug

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -218,10 +218,13 @@ footer li:first-child::before {
 
 /* Book animations */
 
+.books-container .book {
+  opacity: 0;
+}
+
 .is-visible .books-container .book {
   -webkit-animation: show-book .8s cubic-bezier(0,1,1,1) forwards;
   animation: show-book .8s cubic-bezier(0,1,1,1) forwards;
-  opacity: 0;
 }
 
 .is-visible .books-container .book-orange {
